--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nobitex.js",
   "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
+  "description": "NPM Module For www.nobitex.ir (Crypto Trading Website)",
+  "main": "./src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "index.test.js"
   },
   "repository": {
     "type": "git",
