--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,8 @@
         "User": "/user",
         "Wallet": {
             "Balance": "/balance",
-            "list": "/list"
+            "list": "/list",
+            "Create":"/generate-address"
         }
     }
 }
