--- a/src/config.json
+++ b/src/config.json
@@ -8,6 +8,7 @@
     "Profile": "/user/profile",
     "Limitations": "/user/limitations",
     "EMGCancel": "/security/emergency-cancel/activate",
+    "AddCard":"/user/cards-add",
     "AddBank":"/user/accounts-add",
     "Wallet": {
         "Balance": "/user/wallets/balance",
